--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "website": "hugo --minify",
     "critical": "gulp critical",
     "minify": "gulp minify",
-    "build": "run-s documentation website minify critical",
+    "build": "run-s documentation website minify",
     "preview": "hugo server -D",
     "check": "link-checker --disable-external --mkdocs --allow-hash-href public"
   },
