--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "devDependencies": {
     "@antora/cli": "~2.0",
     "@antora/site-generator-default": "~2.0",
-    "critical": "~1.3",
+    "critical": "^2.0.0-19",
     "gulp": "~4.0",
     "gulp-htmlmin": "~5.0",
     "hugo-cli": "~0.9",
@@ -24,8 +24,5 @@
   "installConfig": {
     "pnp": true
   },
-  "dependencies": {
-    "handlebars": "~4.1",
-    "toml": "~3.0"
-  }
+  "dependencies": {}
 }
